--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
 }
 
 
-#speadOne , #speadTwo {
+#speadOne,
+#speadTwo {
     animation: move 4s infinite alternate;
     transform-origin: center;
     transform-box: fill-box;
@@ -24,7 +25,7 @@ body {
 
 @keyframes move {
 
-    form {  
+    form {
         transform: translate3d(-200%, 0, 0);
     }
 
@@ -35,12 +36,10 @@ body {
 
 @keyframes man {
     form {
-      transform: rotateX(0)
+        transform: rotateX(0)
     }
 
     to {
         transform: rotateX(20deg)
     }
 }
-
-
